@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2003-7   The R Development Core Team.
+ *  Copyright (C) 2003-10   The R Development Core Team.
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -27,7 +27,7 @@ static const R_CMethodDef CEntries[] = {
     {"tcltk_start", (DL_FUNC) &tcltk_start, 0},
     {"tcltk_end", (DL_FUNC) &tcltk_end, 0},
 #else
-    {"tcltk_init", (DL_FUNC) &tcltk_init, 0},
+    {"tcltk_init", (DL_FUNC) &tcltk_init, 1},
     {"delTcl", (DL_FUNC) &delTcl, 0},
     {"RTcl_ActivateConsole", (DL_FUNC) &RTcl_ActivateConsole, 0},
 #endif
