@@ -25,7 +25,11 @@ select.list <-
         if (.Platform$OS.type == "windows" || .Platform$GUI == "AQUA")
         return(.Internal(select.list(choices, preselect, multiple, title)))
         ## must be Unix here
-        else if(graphics && capabilities("tcltk") && capabilities("X11"))
+        ## Tk might not require X11 on Mac OS X, but if DISPLAY is set
+        ## this will work for Aqua Tcl/Tk.
+        ## OTOH, we do want to check Tk works!
+        else if(graphics && capabilities("tcltk") &&
+                capabilities("X11") && suppressWarnings(tcltk:::.TkUp))
             return(tcltk::tk_select.list(choices, preselect, multiple, title))
     }
     ## simple text-based alternatives.
